fixed underline links dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,3 +80,7 @@ a.custom-underline:after {
 a.custom-underline:hover:after {
   width: 90%;
 }
+
+a.custom-underline.dark-mode::after {
+  background-color: rgb(255, 255, 255, 0.5);
+}
